@@ -1,4 +1,12 @@
-2003-07-10  Fumitoshi UKAI  <ukai@ukai.org>
+2003-07-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03937] <center> in <table>
+	* table.c (feed_table_tag): fix <center>,</center>,<div>,</div>,
+				<p>,<br>,<nobr>,</nobr>,<wbr>
+			check_rowcol() for <img>
+	
+
+2003-07-10  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* w3mimg/fb/fb_img.h (get_image_size): add missing prototypes
 	* w3mimg/fb/fb.c (fb_clear): unused variable `j'
